#
################################################################################

################################################################################
# changes in development version since last release 
################################################################################

# IntaRNA
- `--outSep` = user-defined column separator for tabular CSV output

################################################################################  
################################################################################  

191008 Martin Raden
 * IntaRNA/OutputHandlerCsv :
   + bpList output : list of base pairs
 * README.md :
   + bpList 
   + outSep

191008 Martin Raden
 * bin/CommandLineParsing :
   + 'outSep' argument to set column separator for tabular CSV output
   * outSep applied to PredictionTracker*
 * IntaRNA/PredictionTracker* : 
   + explicit output column separator
 * IntaRNA/OutputHandlerCsv :
   * needsZall() :
   * needBPs() :
     - colSep argument : obsolete
  
191007 Martin Raden
 * bin/CommandLineParsing :
   * bugfix accNoLP and accNoGUend checks for energy!=V
 * IntaRNA/NussinovHandler :
   * getQ() :
     * fix: return 1 if (i==j)
 * IntaRNA/AccessibilityVrna :
   * construction() : 
     + bugfix: missing ED initialization for short sequences
 * tests/AccessibilityBasePair :
   + short sequence test
 + tests/AccessibilityVrna  :
   + short sequence test to validate ED initialization

################################################################################
### version 3.1.1 
################################################################################  

# IntaRNA
- base pairs details only computed if needed for output (speedup for large -n)
- predefined parameter sets for loading (Turner04, Turner99, Andronescu07)
- 'tRegion' and 'qRegion' now available for and applied to multi-sequence input

################################################################################  
  
190924 Martin Raden